examples/test/testpolicy8778.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8778
  namespace: namespace80
spec:
  podSelector:
    matchLabels:
      key17: value24
      key22: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value3
      podSelector:
        matchLabels:
          key22: value47
          key41: value20
          key43: value44
